--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
                 }
         </style>
         <link href="css/styles.css" rel="stylesheet" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RBE87WBWD8"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-RBE87WBWD8');
+        </script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
