--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                 }
         </style>
         <link href="css/styles.css" rel="stylesheet" />
-       <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-S59E91Q37N"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-W73HKSH5S7"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
 
-          gtag('config', 'G-S59E91Q37N');
-</script>
+          gtag('config', 'G-W73HKSH5S7');
+        </script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
